# super-mario-game

./: CMakeLists.txt  README.txt
include/: BreakableCube.h  CollisionHandling.h  DoorBorder.h  Elements.h  Goomba.h  Mario.h  Menu.h
project_oop2_Nethanel_Gak_David_Nyssen/project_oop2_Nethanel_Gak_David_Nyssen/include/: Board.h  Bullet.h  CMakeLists.txt  Coin.h  CoinCube.h  Controller.h  Cube.h  Door.h  Enemy.h  Ground.h  HUD.h  Levels.h  MovingElements.h  NotBreakableCube.h  StaticsElements.h  Trap.h  Turtle.h  macros.h
project_oop2_Nethanel_Gak_David_Nyssen/project_oop2_Nethanel_Gak_David_Nyssen/resources/: Level1temp.txt  Level2.txt
project_oop2_Nethanel_Gak_David_Nyssen/project_oop2_Nethanel_Gak_David_Nyssen/src/: Board.cpp  CMakeLists.txt  Coin.cpp  Controller.cpp  Door.cpp  Enemy.cpp  Ground.cpp  MovingElements.cpp  NotBreakableCube.cpp  StaticsElements.cpp  main.cpp
resources/: CMakeLists.txt  Level1.txt  Level3.txt
src/: BreakableCube.cpp  Bullet.cpp  CoinCube.cpp  CollisionHandling.cpp  Cube.cpp  DoorBorder.cpp  Elements.cpp  Goomba.cpp  HUD.cpp  Mario.cpp  Menu.cpp  Trap.cpp  Turtle.cpp
